# instrument_control

./: .gitignore  pyproject.toml
siglent/ssg5060xv/: cw.py
src/instrument_control/: __init__.py  custom_modulation.py  signal_generator.py  spectrum_analyser.py
src/instrument_control/keysight/: n9000.py
src/instrument_control/keysight/e8267d/: basic.py
src/instrument_control/siglent/ssg5060xv/: cw.py
